fix(wizard): allow long page titles to wrap in stepnav (#1211)
Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [x] If applicable, have a visual design approval

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [x] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

Longer page titles in the wizard do not wrap, resulting in some text
being hidden. Longer text strings are necessary for
internationalization, as relative short titles in english can become
much longer in other languages.

Issue Number: CDE-1648, CDE-1645

Longer page titles will wrap when listed in the step nav.

- [ ] Yes
- [x] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

---------

--- a/projects/angular/src/wizard/_wizard.clarity.scss
+++ b/projects/angular/src/wizard/_wizard.clarity.scss
@@ -187,6 +187,11 @@
         }
       }
 
+      .clr-wizard-stepnav-link-title {
+        word-break: break-word;
+        white-space: normal;
+      }
+
       &.complete {
         border-color: wizard-variables.$clr-wizard-stepnav-item-border-color--active;
         transition: border-color 0.2s ease-in;
@@ -213,7 +218,9 @@
       text-transform: none;
       margin: 0;
       padding: tokens.$cds-global-space-5;
-
+      height: auto;
+      min-height: tokens.$cds-global-space-11;
+      max-width: inherit;
       @include mixins.generate-typography-token('BODY-14-MD-STD');
 
       .clr-wizard-stepnav-link-suffix {
